; ModuleID = '/home/carl/AnghaBench/linux/drivers/interconnect/qcom/extr_qcs404.c_qcom_icc_aggregate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/interconnect/qcom/extr_qcs404.c_qcom_icc_aggregate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.icc_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.icc_node*, i64, i64, i64, i64*, i64*)* @qcom_icc_aggregate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qcom_icc_aggregate(%struct.icc_node* %0, i64 %1, i64 %2, i64 %3, i64* %4, i64* %5) #0 {
  %7 = alloca %struct.icc_node*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i64*, align 8
  store %struct.icc_node* %0, %struct.icc_node** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64* %4, i64** %11, align 8
  store i64* %5, i64** %12, align 8
  %13 = load i64, i64* %9, align 8
  %14 = load i64*, i64** %11, align 8
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, %13
  store i64 %16, i64* %14, align 8
  %17 = load i64*, i64** %12, align 8
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* %10, align 8
  %20 = call i64 @max(i64 %18, i64 %19)
  %21 = load i64*, i64** %12, align 8
  store i64 %20, i64* %21, align 8
  ret i32 0
}

declare dso_local i64 @max(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
